resumable index build hangs waiting for majority commit point in replica_sets_kill_secondaries_jscore_passthrough

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Fixed
    • Priority: Major - P3
    • 4.8.0
    • Affects Version/s: None
    • Component/s: Storage
    • None
    • Fully Compatible
    • ALL
    • Execution Team 2020-09-21
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      When resumable index builds are enabled (see SERVER-49847), the replica_sets_kill_secondaries_jscore_passthrough test suite regularly times out. The logs indicate that there are resumable index builds stuck waiting for the majority commit point before scanning the collection.

      The majority wait functionality was added in SERVER-48476 to support rolling back a resumable index build.

            Assignee:
            Benety Goh (Inactive)
            Reporter:
            Benety Goh (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved: