SERVER-50519 index build is resumable only if commit quorum is the default (i.e. all-voters) and node is a voter