jstests/noPassthrough/indexbg_restart_secondary.js
@@ -73,7 +73,6 @@ replTest.start(second,
                {
                    setParameter: {
                        "failpoint.hangAfterSettingUpIndexBuildUnlocked": tojson({mode: "alwaysOn"}),
-                       "failpoint.hangAfterSettingUpResumableIndexBuild": tojson({mode: "alwaysOn"})
                    }
                },
                /*restart=*/true,
@@ -93,14 +92,9 @@ try {
     // Verify that we do not wait for the index build to complete on startup.
     assert.eq(size, secondDB.getCollection(collectionName).find({}).itcount());
 
-    // Verify that only the _id index is ready.
-    const supportsCommittedReads =
-        assert.commandWorked(secondDB.serverStatus()).storageEngine.supportsCommittedReads;
-    if (ResumableIndexBuildTest.resumableIndexBuildsEnabled(second) && supportsCommittedReads) {
-        checkLog.containsJson(second, 4841704);
-    } else {
-        checkLog.containsJson(second, 4585201);
-    }
+    // The hangAfterSettingUpIndexBuildUnlocked fail point logs this message when it is active.
+    checkLog.containsJson(second, 4585201);
+
     IndexBuildTest.assertIndexes(secondDB.getCollection(collectionName),
                                  4,
                                  ["_id_"],
@@ -109,8 +103,6 @@ try {
 } finally {
     assert.commandWorked(second.adminCommand(
         {configureFailPoint: 'hangAfterSettingUpIndexBuildUnlocked', mode: 'off'}));
-    assert.commandWorked(second.adminCommand(
-        {configureFailPoint: 'hangAfterSettingUpResumableIndexBuild', mode: 'off'}));
 
     // Let index build complete on primary, which replicates a commitIndexBuild to the secondary.
     IndexBuildTest.resumeIndexBuilds(primaryDB);
